-- Normalize control/workflow statuses to canonical values.

UPDATE control_controls
SET control_status = CASE
    WHEN control_status IS NULL OR btrim(control_status) = '' THEN 'DRAFT'
    ELSE CASE upper(replace(replace(control_status, ' ', '_'), '-', '_'))
        WHEN 'DRAFT' THEN 'DRAFT'
        WHEN 'NOT_STARTED' THEN 'DRAFT'
        WHEN 'IN_PROGRESS' THEN 'DRAFT'
        WHEN 'FACILITATOR_REVIEW' THEN 'IN_PROGRESS'
        WHEN 'CONTROL_OPERATOR_REVIEW' THEN 'REVIEW'
        WHEN 'SOQM_LEAD_REVIEW' THEN 'SOQM_HEAD_REVIEW'
        WHEN 'SOQM_HEAD_REVIEW' THEN 'SOQM_HEAD_REVIEW'
        WHEN 'PROCESS_OWNER_REVIEW' THEN 'PROCESS_OWNER_REVIEW'
        WHEN 'COMPLETED' THEN 'COMPLETED'
        WHEN 'CANCELLED' THEN 'COMPLETED'
        WHEN 'CANCELED' THEN 'COMPLETED'
        WHEN 'REJECT' THEN 'IN_PROGRESS'
        WHEN 'REJECTED' THEN 'IN_PROGRESS'
        WHEN 'RETURNED_TO_FACILITATOR' THEN 'IN_PROGRESS'
        WHEN 'RETURNED_BY_CONTROL_OPERATOR' THEN 'IN_PROGRESS'
        WHEN 'RETURNED_BY_PROCESS_OWNER' THEN 'IN_PROGRESS'
        WHEN 'RETURNED_TO_OPERATOR' THEN 'REVIEW'
        WHEN 'RETURNED_BY_SOQM_LEAD' THEN 'REVIEW'
        WHEN 'RETURNED_TO_SOQM' THEN 'SOQM_HEAD_REVIEW'
        WHEN 'RETURNED_TO_PROCESS_OWNER' THEN 'PROCESS_OWNER_REVIEW'
        ELSE control_status
    END
END;

UPDATE workflow_steps
SET status = CASE
    WHEN status IS NULL OR btrim(status) = '' THEN 'DRAFT'
    ELSE CASE upper(replace(replace(status, ' ', '_'), '-', '_'))
        WHEN 'DRAFT' THEN 'DRAFT'
        WHEN 'NOT_STARTED' THEN 'DRAFT'
        WHEN 'IN_PROGRESS' THEN 'DRAFT'
        WHEN 'FACILITATOR_REVIEW' THEN 'IN_PROGRESS'
        WHEN 'CONTROL_OPERATOR_REVIEW' THEN 'REVIEW'
        WHEN 'SOQM_LEAD_REVIEW' THEN 'SOQM_HEAD_REVIEW'
        WHEN 'SOQM_HEAD_REVIEW' THEN 'SOQM_HEAD_REVIEW'
        WHEN 'PROCESS_OWNER_REVIEW' THEN 'PROCESS_OWNER_REVIEW'
        WHEN 'COMPLETED' THEN 'COMPLETED'
        WHEN 'RETURNED' THEN 'COMPLETED'
        WHEN 'REJECTED' THEN 'COMPLETED'
        ELSE status
    END
END;

UPDATE workflow_history
SET from_step = CASE
    WHEN from_step IS NULL OR btrim(from_step) = '' THEN from_step
    ELSE CASE upper(replace(replace(from_step, ' ', '_'), '-', '_'))
        WHEN 'DRAFT' THEN 'DRAFT'
        WHEN 'NOT_STARTED' THEN 'DRAFT'
        WHEN 'IN_PROGRESS' THEN 'DRAFT'
        WHEN 'FACILITATOR_REVIEW' THEN 'IN_PROGRESS'
        WHEN 'CONTROL_OPERATOR_REVIEW' THEN 'REVIEW'
        WHEN 'SOQM_LEAD_REVIEW' THEN 'SOQM_HEAD_REVIEW'
        WHEN 'SOQM_HEAD_REVIEW' THEN 'SOQM_HEAD_REVIEW'
        WHEN 'PROCESS_OWNER_REVIEW' THEN 'PROCESS_OWNER_REVIEW'
        WHEN 'COMPLETED' THEN 'COMPLETED'
        WHEN 'CANCELLED' THEN 'COMPLETED'
        WHEN 'CANCELED' THEN 'COMPLETED'
        WHEN 'REJECT' THEN 'IN_PROGRESS'
        WHEN 'REJECTED' THEN 'IN_PROGRESS'
        WHEN 'RETURNED_TO_FACILITATOR' THEN 'IN_PROGRESS'
        WHEN 'RETURNED_BY_CONTROL_OPERATOR' THEN 'IN_PROGRESS'
        WHEN 'RETURNED_BY_PROCESS_OWNER' THEN 'IN_PROGRESS'
        WHEN 'RETURNED_TO_OPERATOR' THEN 'REVIEW'
        WHEN 'RETURNED_BY_SOQM_LEAD' THEN 'REVIEW'
        WHEN 'RETURNED_TO_SOQM' THEN 'SOQM_HEAD_REVIEW'
        WHEN 'RETURNED_TO_PROCESS_OWNER' THEN 'PROCESS_OWNER_REVIEW'
        ELSE from_step
    END
END,
    to_step = CASE
    WHEN to_step IS NULL OR btrim(to_step) = '' THEN to_step
    ELSE CASE upper(replace(replace(to_step, ' ', '_'), '-', '_'))
        WHEN 'DRAFT' THEN 'DRAFT'
        WHEN 'NOT_STARTED' THEN 'DRAFT'
        WHEN 'IN_PROGRESS' THEN 'DRAFT'
        WHEN 'FACILITATOR_REVIEW' THEN 'IN_PROGRESS'
        WHEN 'CONTROL_OPERATOR_REVIEW' THEN 'REVIEW'
        WHEN 'SOQM_LEAD_REVIEW' THEN 'SOQM_HEAD_REVIEW'
        WHEN 'SOQM_HEAD_REVIEW' THEN 'SOQM_HEAD_REVIEW'
        WHEN 'PROCESS_OWNER_REVIEW' THEN 'PROCESS_OWNER_REVIEW'
        WHEN 'COMPLETED' THEN 'COMPLETED'
        WHEN 'CANCELLED' THEN 'COMPLETED'
        WHEN 'CANCELED' THEN 'COMPLETED'
        WHEN 'REJECT' THEN 'IN_PROGRESS'
        WHEN 'REJECTED' THEN 'IN_PROGRESS'
        WHEN 'RETURNED_TO_FACILITATOR' THEN 'IN_PROGRESS'
        WHEN 'RETURNED_BY_CONTROL_OPERATOR' THEN 'IN_PROGRESS'
        WHEN 'RETURNED_BY_PROCESS_OWNER' THEN 'IN_PROGRESS'
        WHEN 'RETURNED_TO_OPERATOR' THEN 'REVIEW'
        WHEN 'RETURNED_BY_SOQM_LEAD' THEN 'REVIEW'
        WHEN 'RETURNED_TO_SOQM' THEN 'SOQM_HEAD_REVIEW'
        WHEN 'RETURNED_TO_PROCESS_OWNER' THEN 'PROCESS_OWNER_REVIEW'
        ELSE to_step
    END
END;

ALTER TABLE control_controls
    ADD CONSTRAINT chk_control_status_canonical
    CHECK (control_status IN ('DRAFT', 'IN_PROGRESS', 'REVIEW', 'SOQM_HEAD_REVIEW', 'PROCESS_OWNER_REVIEW', 'COMPLETED'));

ALTER TABLE workflow_steps
    ADD CONSTRAINT chk_workflow_step_status_canonical
    CHECK (status IN ('DRAFT', 'IN_PROGRESS', 'REVIEW', 'SOQM_HEAD_REVIEW', 'PROCESS_OWNER_REVIEW', 'COMPLETED'));
